--- a/31-5-2023.md
+++ b/31-5-2023.md
@@ -1,11 +1,15 @@
 # Homework System [ Alchemy#9999 ]
 
 - วิทยาศาสตร์
-  - h
+  - ทำแบบฝึกหัด 2ข้อลงในสมุดจากหน้าที่ 31 และแบบฝึกหัดท้ายบท 3ข้อลงในสมุด
+  - [ ส่งภายใน คาบ เท่านั้น ]
 - ประวัติศาสตร์
+  - ไม่สามารถระบุเนื้อหาได้
+
 
 - คณิตศาสตร์
-
+  - ทำแบบฝึกหัดข้อที่ 1-5
+  - [ ส่งภายใน วันนี้ เท่านั้น ]
 - ภาษาอังกฤษ
 
 - พลศึกษา
