--- a/31-5-2023.md
+++ b/31-5-2023.md
@@ -2,7 +2,7 @@
 
 - วิทยาศาสตร์
   - ทำแบบฝึกหัด 2ข้อลงในสมุดจากหน้าที่ 31 และแบบฝึกหัดท้ายบท 3ข้อลงในสมุด
-  - [ ส่งภายใน คาบ เท่านั้น ]
+  [ ส่งภายใน คาบ เท่านั้น ]
 - ประวัติศาสตร์
   - ไม่สามารถระบุเนื้อหาได้
 
