--- a/31-5-2023.md
+++ b/31-5-2023.md
@@ -2,17 +2,113 @@
 
 - วิทยาศาสตร์
   - ทำแบบฝึกหัด 2ข้อลงในสมุดจากหน้าที่ 31 และแบบฝึกหัดท้ายบท 3ข้อลงในสมุด
-  [ ส่งภายใน คาบ เท่านั้น ]
+  + [ ส่งภายใน คาบ เท่านั้น ]
 - ประวัติศาสตร์
   - ไม่สามารถระบุเนื้อหาได้
 
 
 - คณิตศาสตร์
   - ทำแบบฝึกหัดข้อที่ 1-5
-  - [ ส่งภายใน วันนี้ เท่านั้น ]
+  + [ ส่งภายใน วันนี้ เท่านั้น ]
 - ภาษาอังกฤษ
-
+  - ฝึกอ่านจดหมายและวิธีการเขียนจดหมายเป็นภาษาอังกฤษ
 - พลศึกษา
-
+  - ทดสอบการวิ่ง 4รอบ
 - ชุมนุม
+  - {{
 
+  "content": null,
+
+  "embeds": [
+
+    {
+
+      "title": "การบ้านของวันนี้",
+
+      "description": "Discord.js Module Function ( Alchemy#9999 )",
+
+      "color": 521641,
+
+      "fields": [
+
+        {
+
+          "name": "คาบแรก : ภาษาจีน",
+
+          "value": "```md\n- ไม่สามารถระบุเนื้อหาได้\n```"
+
+        },
+
+        {
+
+          "name": "คาบสอง : ศิลปะ",
+
+          "value": "```md\n- ทำใบงานเรื่องทัศนธาตุ โดยให้ปริ้นรูปมาแปะด้านซ้าย 4รูป และด้านขาวให้วาดรูปเองตามรูปแบบทัศนธาตุตามที่ตนเองเขียน\n```"
+
+        },
+
+        {
+
+          "name": "คาบที่สาม : สุขศึกษา",
+
+          "value": "```md\n- ทำกิจกรรมในคาบเรียน\n```"
+
+        },
+
+        {
+
+          "name": "คาบที่สี่ : วิทยาศาสตร์",
+
+          "value": "```md\n- ทำโจทย์ 2ข้อลงในสมุดจากรูปในหนังสือ\n[ ส่งภายในคาบเรียน ]\n```"
+
+        },
+
+        {
+
+          "name": "คาบที่ห้า : การงานอาชีพ",
+
+          "value": "```md\n- สรุปหน้า 9-12 ลงในกระดาษ A4 รูปแบบใดก็ได้เช่น Mindmap\n[ ส่งในอาทิตย์ต่อไปเท่านั้น ]\n```"
+
+        },
+
+        {
+
+          "name": "คาบที่หก : ธรรมศึกษา",
+
+          "value": "```md\n- ทำแบบทดสอบธรรมศึกษาในคาบชั้น ตรี/โท 50ข้อ ให้ได้อย่างน้อย 25คะแนน [ https://quiz.dhammastudy.org/ ]\n```"
+
+        },
+
+        {
+
+          "name": "คาบที่เจ็ด : ธรรมศึกษา",
+
+          "value": "```md\n- ทำแบบทดสอบธรรมศึกษาในคาบชั้น ตรี/โท 50ข้อ ให้ได้อย่างน้อย 25คะแนน [ https://quiz.dhammastudy.org/ ]\n```"
+
+        }
+
+      ],
+
+      "author": {
+
+        "name": "Alchemy.netify.app [ Homework System ]",
+
+        "icon_url": "https://cdn.discordapp.com/attachments/1093814269985947649/1103216098356232222/Alchemy.png"
+
+      },
+
+      "footer": {
+
+        "text": "วันศุกรที่ 26 พฤษภาคม พศ 2566",
+
+        "icon_url": "https://cdn.discordapp.com/attachments/1093814269985947649/1103216098356232222/Alchemy.png"
+
+      }
+
+    }
+
+  ],
+
+  "attachments": []
+
+}
