--- a/31-5-2023.md
+++ b/31-5-2023.md
@@ -15,19 +15,20 @@
 - พลศึกษา
   - ทดสอบการวิ่ง 4รอบ
 - ชุมนุม
-  - {{
+  - ไม่สามารถระบุเนื้อหาได้
 
-  "content": null,
 
-  "embeds": [
 
-    {
 
-      "title": "การบ้านของวันนี้",
+
+  
+
+
+
 
       "description": "Discord.js Module Function ( Alchemy#9999 )",
 
-      "color": 521641,
+      
 
       "fields": [
 
